# fast-geocn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: index.md
src/fast_geocn/: __init__.py  coord.py  core.py  preprocess.py
tests/: conftest.py  test_coord.py  test_core.py
