[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-geocn"
version = "1.1.1"
description = "超轻量离线中国行政区划逆地理编码（仅依赖 shapely）"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "jdb110"},
]
requires-python = ">=3.9"
keywords = ["geocoding", "china", "administrative-division", "reverse-geocoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs-material",
]

[project.scripts]
fast-geocn-prepare = "fast_geocn.preprocess:main"

[project.urls]
Homepage = "https://github.com/jdb110/fast-geocn"
Repository = "https://github.com/jdb110/fast-geocn"
Issues = "https://github.com/jdb110/fast-geocn/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fast_geocn = ["data/*.geojson"]

# ---- 工具配置 ----
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=fast_geocn --cov-report=term-missing"
norecursedirs = ["dev", "scripts"]

[tool.coverage.run]
source = ["fast_geocn"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
